# slim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  mock-guapo.py  post-create.sh  post-start.sh
.github/: CODEOWNERS  SETUP.md  configure-repo.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug.yml  config.yml  feature.yml  needs-instructor.yml
.github/scripts/: create-starter-issues.sh
.github/workflows/: README.md  deploy-on-main.yml  pr-01-secrets-scan.yml  pr-02-code-quality.yml  pr-03-red-team.yml  pr-04-blue-team.yml  pr-05-classroom-safety.yml  pr-06-version-discipline.yml  pr-07-build-and-smoke.yml  pr-08-slop-and-scope.yml  pr-09-malicious-code-review.yml
app/: README.md  main.py
app/examples/: README.md
app/personas/: README.md  pirate.yaml
app/static/: README.md
app/system_prompts/: README.md  default.md
app/templates/: README.md  chat.html  docs.html  guide.html  home.html
core/: README.md  __init__.py
core/agents/: README.md  __init__.py  judge.py  loader.py  proxy.py
core/agents/prompts/: blue_team_prompt.md  classroom_safety_rules.yaml  discipline_explanations.yaml  judge_templates.yaml  lint_explanations.yaml  malicious_review_prompts.md  pythonic_review_prompt.md  red_team_probes.yaml  secrets_review_prompt.md  slop_scope_prompt.md
core/agents/runners/: README.md
core/chat/: README.md  __init__.py  client.py  errors.py  messages.py  security.py  stream.py
core/observability/: README.md  __init__.py  app.py  guapo_provider.py  projection.py  records.py  ring_buffer.py  slim_stats.py
core/observability/templates/: _live.html  _stats_guapo.html  _stats_slim.html  metrics.html
core/ops/: README.md  __init__.py  app.py  auth.py  events.py  kill_switches.py
core/ops/templates/: _events.html  _switches.html  ops.html
core/prompts/: README.md  __init__.py  baseline.md  mentor.md
core/python/: README.md
core/templates/: base.html
core/timing/: README.md  __init__.py
docker/: README.md  compose.example.yml  smoke_test.py
docker/agent-proxy/: Dockerfile  README.md  server.py
docker/app/: .dockerignore  Dockerfile  README.md
docker/deploy/: deploy.sh  install.sh  rollback.sh
docker/firewall/: README.md  audit_drops.sh  rules.nft  setup.sh
docker/sidecar/: Dockerfile  README.md  requirements.txt  server.py
docs/: PRE-CLASS-CHECKLIST.md
docs/wiki/: 01-Architecture.md  02-Contribution-Workflow.md  03-Bidirectional-Framing.md  04-Your-First-PR.md  05-Agents-Reference.md  06-Troubleshooting.md  07-Feature-Backlog.md  Home.md  README.md
scripts/: README.md  e2e-smoke.sh  explain-failure.sh  preflight.sh
tests/core/: test_agents.py  test_chat.py  test_observability.py  test_ops.py
